<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">


        <LinearLayout
            android:id="@+id/layoutCalendar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/roundcorner"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintEnd_toStartOf="@+id/layoutChart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageView
                android:id="@+id/calendar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/calendar"
                tools:layout_editor_absoluteX="57dp"
                tools:layout_editor_absoluteY="31dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Calendar"
                android:fontFamily="@font/fredoka_one"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutChart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/roundcorner"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/layoutCalendar"
            android:padding="15dp"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageView
                android:id="@+id/chart"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/chart"
                tools:layout_editor_absoluteX="57dp"
                tools:layout_editor_absoluteY="31dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Chart"
                android:fontFamily="@font/fredoka_one"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutGoal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/roundcorner"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintEnd_toStartOf="@+id/layoutChart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutCalendar" >

            <ImageView
                android:id="@+id/challenge"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/goal"
                tools:layout_editor_absoluteX="57dp"
                tools:layout_editor_absoluteY="31dp"
                android:onClick="challenge"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Challenge"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:fontFamily="@font/fredoka_one"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutMore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/roundcorner"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/layoutCalendar"
            android:padding="15dp"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutCalendar" >

            <ImageView
                android:id="@+id/more"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:padding="8dp"
                android:src="@drawable/more"
                tools:layout_editor_absoluteX="57dp"
                tools:layout_editor_absoluteY="31dp"
                android:onClick="more"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/More"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:fontFamily="@font/fredoka_one" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/trending_background"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="@id/layoutMore"
            app:layout_constraintStart_toStartOf="@+id/layoutCalendar"
            app:layout_constraintTop_toBottomOf="@+id/layoutGoal" >

            <TextView
                android:id="@+id/textTreanding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/roundcorner"
                android:paddingStart="8dp"
                android:paddingTop="2dp"
                android:paddingEnd="8dp"
                android:paddingBottom="2dp"
                android:text="@string/Info"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_favorite_border_24"
                app:layout_constraintBottom_toBottomOf="@id/textTreanding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/textTreanding" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tipText"
                android:textColor="@color/cardview_light_background"
                android:textSize="20sp"

                app:layout_constraintTop_toBottomOf="@id/textTreanding"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>